--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,21 @@
 .button-clean {
+  padding: 2px 3px 2px 3px;
+  border: none;
+  border-radius: 4px;
+  background-color: #eeeeee;
+  box-shadow: 1px 2px 5px #00000066;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  text-transform: lowercase;
+  text-align: center;
+  transition: transform 0.25s, box-shadow 0.25s;
+}
 
+.button-clean:active {
+  box-shadow: -1px 0px 2px #00000033;
+  transform: scale(0.9);
 }
 
 .footer__contentBox {
