--- a/style/index.css
+++ b/style/index.css
@@ -18,8 +18,17 @@
   transform: scale(0.9);
 }
 
-.footer__contentBox {
+.footer__contentBox, .header__contentBox {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0;
+}
 
+.footer__contentBox {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .header__contentBox {
