--- a/style/index.css
+++ b/style/index.css
@@ -22,17 +22,18 @@
   width: 100%;
   margin: 0 auto;
   padding: 0;
+  display: flex;
+  align-items: center;
 }
 
 .footer__contentBox {
-  display: flex;
-  align-items: center;
   flex-direction: column;
   justify-content: center;
 }
 
 .header__contentBox {
-
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 .link-23 {
