--- a/style/index.css
+++ b/style/index.css
@@ -37,7 +37,18 @@
 }
 
 .link-23 {
+  color: #3b3b3b;
+  cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1em;
+  font-weight: 600;
+  text-align: center;
+  text-decoration: none;
+  transition: border 0.15s;
+}
 
+.link-23:hover {
+  border-bottom: 2px solid #3b3b3b;
 }
 
 .m_title {
