--- a/style/index.css
+++ b/style/index.css
@@ -52,7 +52,11 @@
 }
 
 .m_title {
-
+  margin: 0;
+  color: #000;
+  font-family: serif;
+  font-weight: 500;
+  letter-spacing: 2px;
 }
 
 .page__footer {
