CMT-6: add mesma regras de estilo as elementos #m_header, #m_content e #m_footer

--- a/style/index.css
+++ b/style/index.css
@@ -71,10 +71,15 @@
 
 /* ESPECÍFICOS */
 
+#m_header, #m_content, #m_footer {
+  max-width: 912px;
+  width: 100vw;
+  padding: 0;
+}
+
 #m_header {
 
 }
-
 
 #m_content {
 
