CMT-8: add estilo a classe .header__contentBox filho do elemento #m_header; add estilo a classe .m_title filho do elemento #m_header

--- a/style/index.css
+++ b/style/index.css
@@ -95,7 +95,12 @@ body {
 }
 
 #m_header .header__contentBox {
+  justify-content: flex-start;
+}
 
+#m_header .m_title {
+  margin: 2px 0 2px 2%;
+  font-size: 1.7em;
 }
 
 #m_content {
