CMT-12: add estilo ao elemento #m_footer; create bloco de estilo para a classe .footer__contentBox filho do elemento #m_footer

--- a/style/index.css
+++ b/style/index.css
@@ -108,7 +108,10 @@ body {
 }
 
 #m_footer {
-
+  position: fixed;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
 }
 
 /*-----APP-----*/
