CMT-17: create estrutura do menu de configuracoes; create bloco de estilo para as classes do menu de configuracoes; add parametros para funcao generate(from, to)

--- a/style/index.css
+++ b/style/index.css
@@ -175,3 +175,15 @@ body {
 .app__button:active {
   transform: rotateZ(50deg);
 }
+
+.app__configBox {
+
+}
+
+.app_config__textBox {
+  
+}
+
+.app__letterInput {
+
+}
