CMT-19: change melhorias na formatacao do index.js e mudanca do loop while para o do...while; add comentarios em index.js

--- a/style/index.css
+++ b/style/index.css
@@ -217,7 +217,7 @@ body {
   height: 1em;
   border: none;
   border-bottom: 1px solid #cacaca;
-  background-color: transparent;
+  background: transparent;
   color: #3b3b3b;
   font-weight: 600;
   text-align: center;
